--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
             <div id="button-container">
                     <div id="first-row" class="row">
                         <div data-key="" class="clear longer button">CLEAR</div>
-                        <div data-key="" class="division small button"><i class="division fa-solid fa-divide"></i></div>
+                        <div data-key="" class="divide small button"><i class="divide fa-solid fa-divide"></i></div>
                     </div>
                     <div id="second-row" class="row">
                         <div data-key="" class="seven small button">7</div>
                         <div data-key="" class="eight small button">8</div>
                         <div data-key="" class="nine small button">9</div>
-                        <div data-key="" class="multiplication small button"><i class="multiplication fa-solid fa-xmark"></i></div>
+                        <div data-key="" class="multiply small button"><i class="multiply fa-solid fa-xmark"></i></div>
                     </div>
                     <div id="third-row" class="row">
                         <div data-key="" class="four small button">4</div>
                         <div data-key="" class="five small button">5</div>
                         <div data-key="" class="six small button">6</div>
-                        <div data-key="" class="minus small button"><i class="minus fa-solid fa-minus"></i></div>
+                        <div data-key="" class="subtract small button"><i class="subtract fa-solid fa-minus"></i></div>
                     </div>
                     <div id="fourth-row" class="row">
                         <div data-key="" class="one small button">1</div>
                         <div data-key="" class="two small button">2</div>
                         <div data-key="" class="three small button">3</div>
-                        <div data-key="" class="plus small button"><i class="plus fa-solid fa-plus"></i></div>
+                        <div data-key="" class="add small button"><i class="add fa-solid fa-plus"></i></div>
                     </div>
                     <div id="fifth-row" class="row">
                         <div data-key="" class="zero long button">0</div>
